--- a/index.html
+++ b/index.html
@@ -5,29 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>적정 체중 구하는 계산기</title>
     <link rel="stylesheet" href="./styles/reset.css">
-    <style>
-        body {
-            width:1000px; margin:0 auto;
-            display:flex; flex-flow:column nowrap;
-            align-items:center;
-        }
-        h1 {font-size:1.75rem; font-weight:600; color:skyblue; margin:20px 10px;}
-        p {font-size:1.125rem; margin:0 10px 20px;}
-        ul {}
-        ul li {margin:20px;}
-        ul li input {
-            width:400px; height:35px;
-            border:1px solid lightslategray;
-            border-radius:5px; padding:10px;
-        }
-        ul li:nth-child(2) input {width:370px;}
-        ul li:nth-child(3) input {width:385px;}
-        button {
-            margin:10px 10px; padding:10px 210px; font-size: 1.2rem;
-            background-color:lightblue; color:navy; font-weight:600;
-            border:1px solid lightblue; border-radius:10px;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/weight.css">
 </head>
 <body>
     <h1>다이어트 체중계</h1>
